# flower

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build.sh  flower.cc  flower.proto  flower_service.h  flower_service.proto  reformat.sh
cmake/: Toolchain-x86_64-cloudabi.cmake
flower/cat/: CMakeLists.txt  configuration.proto  main.cc  program_main.cc  start.cc  start.h
flower/egress/connect/: CMakeLists.txt  configuration.proto  connect.cc  main.cc  start.cc  start.h
flower/ingress/accept/: CMakeLists.txt  accept.cc  configuration.proto  main.cc  program_main.cc  start.cc  start.h
flower/ingress/local_accept/: CMakeLists.txt
flower/ls/: CMakeLists.txt  configuration.proto  main.cc  program_main.cc  start.cc  start.h
flower/proto/: CMakeLists.txt  egress.proto  resolver.proto  server.proto  switchboard.proto
flower/protocol/: CMakeLists.txt  egress.proto  resolver.proto  server.proto  switchboard.proto
flower/resolver/getaddrinfo/: CMakeLists.txt  getaddrinfo.cc
flower/resolver/local_getaddrinfo/: CMakeLists.txt  local_getaddrinfo.cc
flower/switchboard/: CMakeLists.txt  configuration.proto  directory.cc  directory.h  egress_listener.cc  egress_listener.h  handle.cc  handle.h  handle_test.cc  label_map.cc  label_map.h  listener.cc  listener.h  main.cc  program_main.cc  server_listener.cc  server_listener.h  start.cc  start.h  target_picker.cc  target_picker.h  worker_pool.cc  worker_pool.h
flower/unittests/: CMakeLists.txt
flower/util/: fd_streambuf.h  label_map.h  logger.h  map_union_difference.h  null_ostream.h  null_streambuf.h  ostream_infix_iterator.h  sockaddr.h  socket.h  socketpair.h  switchboard.h
src/: flower.cpp  flower.h  flower_service.proto  main.cpp  program_main.cpp
src/ingress/local_accept/: CMakeLists.txt  local_accept.cc
src/proto/: CMakeLists.txt  flower_resolver.proto  flower_switchboard.proto
src/resolver/local_getaddrinfo/: CMakeLists.txt  local_getaddrinfo.cc
unittests/: CMakeLists.txt
